k8s/deployment.yaml
# 1. MySQL Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
---
# 2. App Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quicknotes-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quicknotes
  template:
    metadata:
      labels:
        app: quicknotes
    spec:
      containers:
      - name: quicknotes-app
        image: gcr.io/bulut-final-odevi/quicknotes-app:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
